--- a/stable/ambassador/values.yaml
+++ b/stable/ambassador/values.yaml
@@ -89,6 +89,8 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name:
 
+initContainers: []
+
 volumes: []
 
 volumeMounts: []
